# SyncPipe

./: .gitignore  DEMO_REPORT.md  Dockerfile  LICENSE  README.md  SYNCPIPE_FAMILY_TREE.html  TABLE1_FEATURE_STATUS.tex  demo_results.json  design_control_audit.json  feature_status_table.csv  feature_table.csv  pyproject.toml  pytest_full.txt  pytest_output.txt  pytest_summary.txt  results.json  synchrony_existence_audit.json
artifacts/: egt4_matrix_results.csv  gt5_results.csv  pgt2_grid_results.csv  pgt3_grid_results.csv
docs/: DECISION_LOG.md  FEATURE_TABLE.csv  FEATURE_TABLE.md  METHOD_LOG.md  SCRIPT_MAP.md  SKILL.md  USER_MANUAL.md
experimental/: README.md
multisync/: __init__.py  __main__.py  batch.py  cli.py  computation_pipeline.py  core.py  dataset.py  design_controls.py  dynamic_features.py  feature_definitions.py  feature_pipeline.py  feature_status.py  feature_vif_test.py  importer.py  inference_pipeline.py  morphology.py  prediction.py  qc.py  report.py  session_threshold.py  surrogate.py  synthetic.py  wcc_export.py  wclr.py
scripts/: analyze_all_gt.py  audit_timing_features.py  build_feature_table.py  export_wcc_vif_morphology.py  fdr_family_impact.py  lerique_feature_analysis.py  rerun_real_datasets.py  run_egt4_matrix.py  run_gordon_case_study.py  run_gt5_simulation.py  run_incremental_auc.py  run_kuramoto_l23_taxonomy.py  run_lerique_incremental_auc.py  run_lerique_pilot.py  run_lerique_shuffle.py  run_pgt2_grid.py  run_pgt2_surrogate.py  run_pgt3_grid.py  surrogate_controls.py  validate_timing_descriptors.py
syncpipe/: __init__.py  __main__.py
(+158 files in other folders)
